force-app/main/default/objects/LWC_Toast_Config__mdt/LWC_Toast_Config__mdt.object-meta.xml
<CustomObject>
    <description>The lightning web component toast configuration.</description>
    <label>LWC Toast Config</label>
    <pluralLabel>LWC Toast Config</pluralLabel>
</CustomObject>