force-app/main/default/objects/LWC_Toast_Config__mdt/fields/For_Type__c.field-meta.xml
<CustomField>
    <fullName>For_Type__c</fullName>
    <description>The config for the toast or alert.</description>
    <inlineHelpText>The config for the toast or alert.</inlineHelpText>
    <label>For Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>info</fullName>
                <default>true</default>
                <label>info</label>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>