force-app/main/default/objects/LWC_Toast_Config__mdt/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
                <default>true</default>
                <label>Alert</label>
            </value>
            <value>
                <fullName>Toast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>