force-app/main/default/objects/LWC_Toast_Config__mdt/fields/Variant_or_Theme__c.field-meta.xml
<CustomField>
    <fullName>Variant_or_Theme__c</fullName>
    <description>The variant (info, error, success, warning) for the toast or theme for the alert (default, shade, inverse, alt-inverse, success, info, warning, error, offline).</description>
    <inlineHelpText>The variant (info, error, success, warning) for the toast or theme for the alert (default, shade, inverse, alt-inverse, success, info, warning, error, offline).</inlineHelpText>
    <label>Variant or Theme</label>
    <length>11</length>
    <type>Text</type>
</CustomField>