force-app/main/default/objects/LWC_Toast_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>For_Type__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Variant_or_Theme__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>